# Cornell-cs3110-ocaml

./: .gitignore  .ocamlformat  README.md  test.ml
.devcontainer/: devcontainer.json  postCreateCommand.sh
Chap 2. OCaml/: dune  exercises.ml
Chap 2. OCaml/tdd/: test.ml
Chap 2. OCaml/unit-test/: sum.ml  test.ml
Chap 3. Data and Types/: dune  exercises.ml  test.ml
Chap 4. Higher-Order Programming/: dune  exercises.ml  test.ml
Chap 4. OCaml/: tdd.ml
Chap 5. Modular Programming/: algebra.ml  date.ml  date.mli  dune  exercises.ml  fraction.ml  fraction_test.ml  map.ml  map_test.ml  print_test.ml  queue.ml  set.ml  set_test.ml  test.ml  tree.ml
Chap 6. Higher-Order Programming/: exercises.ml
Chap 7. Modular Programming/: .ocamlinit  dune  map_test.ml  print.ml  queue.ml
init/: cs3110setup.sh
